# latentis

./: .editorconfig  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  env.yaml  mkdocs.yml  pyproject.toml  setup.cfg  setup.py
.dvc/: config
.github/workflows/: publish.yml  test_suite.yml
benchmarks/eval_estimator/: benchmark.json  benchmark_config.yaml
data/: .gitignore  ImageNet_mapping.tsv.dvc  ImageNet_mapping.txt.dvc  ag_news.dvc  cub.dvc  dbpedia14.dvc  imagenet.dvc  imagenet_text.dvc  imdb.dvc  mnist.dvc
docs/: index.md
notebooks/: bricks_graph.ipynb  demo.ipynb  demo_bricks_to_bridges.ipynb  demo_pipeline.ipynb  demo_relative.ipynb  demo_search.ipynb  demo_translation.ipynb  random_debug.ipynb
src/latentis/: __init__.py  disk_index.py  index.py  io_utils.py  modules.py  nexus.py  sampling.py  search.py  space.py  transforms.py  types.py  utils.py  vector_source.py
src/latentis/benchmark/: __init__.py  benchmark.py  compiler.py  correspondence.py  resolver.py  task.py  visualize.py
src/latentis/brick/: __init__.py  _errors.py  _transform.py  abstract.py
src/latentis/bridge/: __init__.py  _bridge.py
src/latentis/cli/: benchmark.py  database.py  encode.py  latentis  process.py  train.py
src/latentis/correspondence/: __init__.py  _base.py  correspondence.py  gen_correspondences.py
src/latentis/data/: __init__.py  actions.py  dataset.py  disk_index.py  encode.py  image_encoding.py  imagenet.py  processor.py  text_encoding.py  train.py  utils.py
src/latentis/data/encoding/: encode.py  text_pooling.py
src/latentis/estimate/: affine.py  dim_matcher.py  estimator.py  linear.py  orthogonal.py
src/latentis/measure/: __init__.py  _abstract.py  _metrics.py  base.py  cka.py  functional.py  svcca.py
src/latentis/measure/functional/: cka.py  svcca.py
src/latentis/methods/: bricks_to_bridges.py
src/latentis/nn/: __init__.py  _base.py  decoders.py  encoders.py
src/latentis/pipeline/: __init__.py  _builder.py  _render.py  _utils.py  dagpipe.py  flow.py  latentis.py  pipeline_pocs.py  test.ipynb
src/latentis/project/: __init__.py  relative.py
src/latentis/relative/: __init__.py  projection.py
src/latentis/sample/: __init__.py  sampling.py
src/latentis/serialize/: disk_index.py  io_utils.py
src/latentis/space/: __init__.py  _base.py  search.py  vector_source.py
src/latentis/transform/: __init__.py  _abstract.py  _transform.py  _transforms.py  abstract.py  base.py  dim_matcher.py  dimensionality_reduction.py  functional.py  projection.py  translate.py
src/latentis/transform/translate/: __init__.py  aligner.py  functional.py
src/latentis/transforms/: __init__.py  _transforms.py  abstract.py  independent.py  joint.py
src/latentis/translate/: translation.py  translator.py
tests/: conftest.py  test_index.py  test_sampling.py  test_search.py  test_search_source.py  test_space.py
tests/brick/: test_transform.py
tests/bridge/: test_bridge.py
tests/data/: test_index.py
tests/encoder/: test_text_encoder.py  test_text_pooling.py
tests/measure/: conftest.py  test_metric.py
tests/metrics/: test_metric.py
tests/project/: conftest.py  test_projection.py
tests/relative/: test_projection.py
tests/sample/: test_sampling.py
tests/sampling/: test_sampling.py
tests/transform/: test_functional_transforms.py  test_transforms.py
tests/transforms/: test_functional_transforms.py
tests/translate/: test_manual_translate.py  test_translator.py
