[tool.pytest.ini_options]
minversion = "6.2"
addopts = "-ra"
testpaths = ["tests"]

[tool.coverage.report]
exclude_lines = [
    "raise NotImplementedError",
    "raise NotImplementedError()",
    "pragma: nocover",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:"
]

[tool.black]
line-length = 120
include = '\.pyi?$'

[tool.mypy]
files= ["src/**/*.py", "test/*.py"]
ignore_missing_imports = true

[tool.isort]
profile = 'black'
line_length = 120
known_third_party = ["numpy", "pytest", "wandb", "torch"]
known_local_folder = "latentis"

[tool.pydocstyle]
convention = 'google'
# ignore all missing docs errors
add-ignore = ['D100', 'D101', 'D102', 'D103', 'D104', 'D105', 'D106', 'D107']

[tool.bandit]
skips = ["B101"]

[build-system]
requires = ["setuptools", "wheel", "setuptools_scm[toml]"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
write_to = "src/latentis/_version.py"
write_to_template = '__version__ = "{version}"'
