[metadata]
name = latentis
description = A Python package for analyzing and transforming neural latent spaces.
url = https://github.com/flegyas/latentis
long_description = file: README.md
author = Valentino Maiorca
author_email = valentino@maiorca.xyz
keywords = python
license = MIT Licence

[options]
zip_safe = False
include_package_data = True
package_dir=
    =src
packages=find:
install_requires =
    nn-template-core==0.2.*

    # Add project specific dependencies
    # Stuff easy to break with updates
    #pytorch-lightning==2.0.*
    pytorch-lightning
    torchmetrics==0.10.*
    hydra-core==1.2.*
    scikit-learn
    torch_geometric

    # Stable stuff usually backward compatible
    rich
    python-dotenv
    matplotlib

[options.packages.find]
where=src

[options.package_data]
* = *.txt, *.md

[options.extras_require]
docs =
    mkdocs
    mkdocs-material
    mike

test =
    pytest
    pytest-cov

dev =
    black
    flake8
    isort
    pre-commit
    bandit
    %(test)s
    %(docs)s
