[metadata]
name = latentis
description = A Python package for analyzing and transforming neural latent spaces.
url = https://github.com/flegyas/latentis
long_description = file: README.md
long_description_content_type = text/markdown
author = Valentino Maiorca
author_email = valentino@maiorca.xyz
keywords = python
license = MIT Licence
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering :: Artificial Intelligence
    Topic :: Scientific/Engineering :: Information Analysis
    Topic :: Scientific/Engineering :: Mathematics
    Topic :: Scientific/Engineering :: Visualization
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
zip_safe = False
include_package_data = True
package_dir=
    =src
packages=find:
install_requires =
    # Add project specific dependencies
    # Stuff easy to break with updates
    torchmetrics
    scikit-learn
    backports.strenum

    python-dotenv
    matplotlib

[options.packages.find]
where=src

[options.package_data]
* = *.txt, *.md

[options.extras_require]
docs =
    mkdocs
    mkdocs-material
    mike

test =
    pytest
    pytest-cov

dev =
    black
    flake8
    isort
    pre-commit
    bandit
    %(test)s
    %(docs)s
